# sputnikvm

./: .catalog-info.yaml  Cargo.toml  rust-toolchain.toml
.github/workflows/: rust.yml  security-analysis.yml
benches/: loop.rs
core/: .catalog-info.yaml  Cargo.toml
core/src/: error.rs  lib.rs  memory.rs  opcode.rs  stack.rs  utils.rs  valids.rs
core/src/eval/: arithmetic.rs  bitwise.rs  macros.rs  misc.rs  mod.rs
evm-tests/EIP-152/src/: lib.rs  portable.rs
evm-tests/ethcore-builtin/: Cargo.toml
evm-tests/ethcore-builtin/src/: kzg.rs  lib.rs
evm-tests/ethjson/: Cargo.toml
evm-tests/ethjson/src/: bytes.rs  lib.rs  transaction.rs  uint.rs
evm-tests/ethjson/src/spec/: spec.rs
evm-tests/jsontests/: Cargo.toml
evm-tests/jsontests/src/: lib.rs  main.rs  state.rs  utils.rs  vm.rs
evm-tests/jsontests/tests/: state.rs  vm.rs
fuzzer/src/: main.rs
gasometer/: .catalog-info.yaml  Cargo.toml
gasometer/src/: consts.rs  costs.rs  lib.rs  memory.rs  tracing.rs
jsontests/: Cargo.toml
jsontests/src/: lib.rs  main.rs
jsontests/src/tests/: custom_invoker.rs  mod.rs
runtime/: .catalog-info.yaml  Cargo.toml
runtime/src/: context.rs  eof.rs  handler.rs  interrupt.rs  lib.rs
runtime/src/eval/: data.rs  macros.rs  mod.rs  system.rs
runtime/src/eval/eof/: call.rs  contract.rs  control.rs  data.rs  ext.rs  jump.rs  mock.rs  mod.rs  stack.rs
src/: lib.rs  maybe_borrowed.rs  tracing.rs
src/backend/: memory.rs  mod.rs
src/executor/stack/: eof.rs  executor.rs  memory.rs  mod.rs  precompile.rs  tagged_runtime.rs
(+1 files in other folders)
