[package]
name = "evm-runtime"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
auto_impl.workspace = true
environmental = { version = "1.1", default-features = false, optional = true }
primitive-types.workspace = true
sha3 = { version = "0.10", default-features = false }

evm-core = { version = "0.43", path = "../core", default-features = false }

[features]
default = ["std"]
std = [
    "environmental/std",
    "primitive-types/std",
    "sha3/std",
    "evm-core/std",
]
tracing = [
    "environmental",
]
